timestamp to lp
